<resources>
    <string name="Main_Window">Refuel manager</string>
    <string name="myName">Created by: \n Boda Péter</string>

    <string name="welcometext">Welcome my app! \n Use this application \n if you want to monitor your refuel!</string>

    <string name="todo">Alright! \n To fill in the blank</string>

    <string name="tx_helpmenu1">This is help menu \n I can help you how to use \n Refuel manager app</string>
    <string name="tx_helpFirst">1. Create Database</string>
    <string name="tx_helpSecond">2. Add new Refuel Record</string>
    <string name="tx_helpThird">3. Monitor yor records</string>
    <string name="tx_helpForth">4. Use it in good health</string>
    <string name="tx_helpFifth">5. Drive carefully</string>
    <string name="tx_helpDelete">You find Delete Database button, \n By pressing this button you can delete the all record, \n which you have added before.   </string>

    <string name="btn_createDB">Create Database</string>
    <string name="btn_deleteDB">Delete Database</string>

    <string name="btn_new_refuel">New refuel</string>
    <string name="btn_add">Save it</string>
    <string name="btn_update">MODIFY</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_backtoMain">Main Menu</string>
    <string name="btn_showall">Show yours records</string>

    <string name="et_date">DATETIME</string>
    <string name="et_kilometers">KILOMETERS IN CAR</string>
    <string name="et_2refuels">KILOMETERS BETWEEN FILLING UP FUEL TANK</string>
    <string name="et_fuelQuanytity">FUEL QUANTITY</string>
    <string name="et_price">PRICE OF THE FUEL</string>

    <string name="tx_adtress">REFUEL MANAGER</string>
    <string name="tx_idhint">Id</string>

    <string name="btn_dontSaveRecord">Drop it</string>

    <string name="helpMenu">Help Menu</string>
    <string name="webpage">holtankoljak.hu</string>
    <string name="webUrl">https://holtankoljak.hu/arvaltozasok</string>
    <string name="googleMaps">Google Maps</string>
    <string name="title_activity_maps">Map</string>

</resources>
