<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_showAllrecord"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBeigle"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView


        android:textColorHint="@color/colorBlack"
        android:hint="@string/et_date"
        android:inputType="text"
        android:id="@+id/showlayout_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText

        android:textColorHint="@color/colorBlack"
        android:hint="@string/et_date"
        android:inputType="text"
        android:id="@+id/showlayout_edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText

        android:id="@+id/showlayout_edit_kilometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_kilometers"
        android:inputType="number"
        android:textColorHint="@color/colorBlack" />

    <EditText
        android:id="@+id/showlayout_edit_2refuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_2refuels"
        android:inputType="number"
        android:textColorHint="@color/colorBlack" />

    <EditText
        android:id="@+id/showlayout_edit_fuelquantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_fuelQuanytity"
        android:inputType="number"
        android:textColorHint="@color/colorBlack" />
    <EditText

        android:id="@+id/showlayout_edit_pricerefuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_price"
        android:inputType="number"
        android:textColorHint="@color/colorBlack" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp">

        <Button
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@color/colorLightGrey"
            android:id="@+id/btn_backToMain"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_backtoMain" />

        <Button
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@color/colorLightGrey"
            android:id="@+id/btn_Update"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <Button
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@color/colorLightGrey"
            android:id="@+id/btn_Delete"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_delete" />

    </LinearLayout>
    <ListView
        android:layout_marginTop="15dp"
        android:id="@+id/listViewShowAllRefuel"
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:choiceMode="singleChoice">

    </ListView>

</LinearLayout>