<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_helpMenu"
    android:background="@color/colorBeigle"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/tx_helpmenu1"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/tx_helpFirst"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/tx_helpSecond"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/tx_helpThird"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/tx_helpForth"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/tx_helpFifth"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textColor="@color/colorIndigo"
        android:textSize="20dp"
        android:text="@string/tx_helpDelete"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>



</LinearLayout>