<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_addNewRefuel"
    android:fillViewport="true">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBeigle"
    tools:context=".MainActivity"
    android:id="@+id/linearLayout"
    >

    <TextView
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/todo"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/edit_ID"
        android:inputType="number"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/tx_idhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:id="@+id/edit_Date"
        android:hint="@string/et_date"
        android:inputType="datetime"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/edit_KilometerClock"
        android:hint="@string/et_kilometers"
        android:textColorHint="@color/colorBlack"
        android:inputType="number"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:id="@+id/edit_KilometersBetweenFillIngUpFuelTank"
        android:hint="@string/et_2refuels"
        android:inputType="number"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:id="@+id/edit_fuelQuantity"
        android:hint="@string/et_fuelQuanytity"
        android:inputType="number"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textStyle="bold"
        android:id="@+id/edit_fuelprice"
        android:hint="@string/et_price"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="50dp"
       android:orientation="horizontal">

       <Button
           android:id="@+id/btn_dropRecord"
           android:padding="15dp"
           android:layout_marginRight="15dp"
           android:gravity="center"
           android:layout_gravity="center|bottom"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btn_dontSaveRecord"
           android:textSize="40sp"
           android:background="@color/colorLightGrey"
           />
       <Button
           android:padding="15dp"
           android:layout_marginLeft="15dp"
           android:id="@+id/btn_saveRecord"
           android:gravity="center"
           android:layout_gravity="center|bottom"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btn_add"
           android:textSize="40sp"
           android:background="@color/colorLightGrey"
           />


   </LinearLayout>





</LinearLayout>
</ScrollView>
